locations and context entries will be shown in panel "Goto Symbol ..." (Ctrl+R shortcut); repaired some RE, added capture markers for using inside extended custom themes;

--- a/Examples/nginx.conf
+++ b/Examples/nginx.conf
@@ -29,7 +29,31 @@ http {
     access_log   logs/domain1.access.log  main;
     root         html;
 
+    # regexp, case-sensitive :
     location ~ \.php$ {
+      fastcgi_pass   127.0.0.1:1025;
+    }
+
+    # regexp, case-insensitive :
+    location ~* \.(?:txt|doc)$ {
+      root html/test;
+    }
+
+    # string, exact match :
+    location = /favicon.ico {
+      root html/test;
+    }
+    # string normal match :
+    location /test/ {
+      alias html/test;
+    }
+    # string, longest matching prefix location (no regexp's will be checked) :
+    location ^~ /direct-url-wo-regexp/test.doc {
+      try_files "" @php;
+    }
+
+    # named :
+    location @php {
       fastcgi_pass   127.0.0.1:1025;
     }
   }
